# API-workshop

./: main.py  pyproject.toml  requirements.txt  testes.py
.github/workflows/: main.yml
